--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-
+<div class="card">
   Equilibrium #3429
 
   Our Equilibrium collection promotes balance and calm.
@@ -28,6 +28,7 @@
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
+  </div>
   </div>
 </body>
 </html>
