Added image of NFT art

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
 <div class="card">
+  <img src="images/image-equilibrium.jpg" alt="picture of Equilibrium art">
   Equilibrium #3429
 
   Our Equilibrium collection promotes balance and calm.
