--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-<div class="card">
+<div class="card" style="width: 18rem ;">
   <img src="images/image-equilibrium.jpg" alt="picture of Equilibrium art">
   Equilibrium #3429
 
