Added card classes to text content to begin seperating them out

--- a/index.html
+++ b/index.html
@@ -29,10 +29,18 @@
         alt="picture of Equilibrium art"
       />
       <div class="card-body">
-        Equilibrium #3429 Our Equilibrium collection promotes balance and calm.
-        0.041 ETH 3 days left Creation of Jules Wyvern
+        <div class="card-title">
+        <h3>Equilibrium #3429 </h3>
+        </div>
+       <p class="card-text">Our Equilibrium collection promotes balance and calm.</p>
+       <a href="#" class="card-link">
+        0.041 ETH 
+        </a>
+        
+        <p class="card-text">O3 days left Creation of Jules Wyvern
+        </p>
 
-        <div class="attribution">
+        <div class="card-footer">
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
             >Frontend Mentor</a
