--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
+
+    <!-- fontawesome icons -->
+    <script
+      src="https://kit.fontawesome.com/87b5f4e074.js"
+      crossorigin="anonymous"
+    ></script>
+    
   </head>
   <body>
     <div class="card" style="width: 18rem">
@@ -30,15 +37,14 @@
       />
       <div class="card-body">
         <div class="card-title">
-        <h3>Equilibrium #3429 </h3>
+          <h3>Equilibrium #3429</h3>
         </div>
-       <p class="card-text">Our Equilibrium collection promotes balance and calm.</p>
-       <a href="#" class="card-link">
-        0.041 ETH 
-        </a>
-        
-        <p class="card-text">O3 days left Creation of Jules Wyvern
+        <p class="card-text">
+          Our Equilibrium collection promotes balance and calm.
         </p>
+        <a href="#" class="card-link"> 0.041 ETH </a>
+
+        <p class="card-text">O3 days left Creation of Jules Wyvern</p>
 
         <div class="card-footer">
           Challenge by
