Added etherium icon to card link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       src="https://kit.fontawesome.com/87b5f4e074.js"
       crossorigin="anonymous"
     ></script>
-    
+
   </head>
   <body>
     <div class="card" style="width: 18rem">
@@ -42,7 +42,7 @@
         <p class="card-text">
           Our Equilibrium collection promotes balance and calm.
         </p>
-        <a href="#" class="card-link"> 0.041 ETH </a>
+        <a href="#" class="card-link"><i class="fa-brands fa-ethereum"></i> 0.041 ETH </a>
 
         <p class="card-text">O3 days left Creation of Jules Wyvern</p>
 
