Moved creation text to footer

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
         </p>
         <a href="#" class="card-link"><i class="fa-brands fa-ethereum"></i> 0.041 ETH </a>
 
-        <p class="card-text">O3 days left Creation of Jules Wyvern</p>
+        <p class="card-text">O3 days left</p>
 
         <div class="card-footer">
+          Creation of Jules Wyvern
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
             >Frontend Mentor</a
