--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <p class="card-text">
           Our Equilibrium collection promotes balance and calm.
         </p>
-        <a href="#" class="card-link"><i class="fa-brands fa-ethereum"></i> 0.041 ETH </a>
+        <a href="#" class="card-link"><img src="images/icon-ethereum.svg" alt="ethereum icon"> 0.041 ETH </a>
 
-        <p class="card-text">O3 days left</p>
+        <p class="card-text"><img src="images/icon-clock.svg" alt="clock icon"></i> O3 days left</p>
 
         <div class="card-footer">
           Creation of Jules Wyvern
