--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
       crossorigin="anonymous"
     />
 
+    <!-- google fonts -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
+
     <!-- fontawesome icons -->
     <script
       src="https://kit.fontawesome.com/87b5f4e074.js"
