--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       crossorigin="anonymous"
     />
 
+    <!-- css stylesheet -->
+
+    <link rel="stylesheet" href="styles.css">
+
     <!-- google fonts -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
