Added custom class for easier selection

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p class="card-text">
           Our Equilibrium collection promotes balance and calm.
         </p>
-        <a href="#" class="card-link"><img src="images/icon-ethereum.svg" alt="ethereum icon"> 0.041 ETH </a>
+        <a href="#" class="card-link price"><img src="images/icon-ethereum.svg" alt="ethereum icon"> 0.041 ETH </a>
 
         <p class="card-text"><img src="images/icon-clock.svg" alt="clock icon"></i> O3 days left</p>
 
