--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
         <p class="card-text">
           Our Equilibrium collection promotes balance and calm.
         </p>
-        <a href="#" class="card-link price"><img src="images/icon-ethereum.svg" alt="ethereum icon"> 0.041 ETH </a>
 
-        <p class="card-text"><img src="images/icon-clock.svg" alt="clock icon"></i> O3 days left</p>
+        <div class="row">
+        <a href="#" class="card-link col-6 price"><img src="images/icon-ethereum.svg" alt="ethereum icon"> 0.041 ETH </a>
+
+        <p class="card-text col-6"><img src="images/icon-clock.svg" alt="clock icon"></i> O3 days left</p>
+        </div>
 
         <div class="card-footer">
           Creation of Jules Wyvern
