Added p tag to text in footer and added span around name to edit color

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <div class="card-footer">
-          Creation of Jules Wyvern
+          <p> Creation of <span class="creator">Jules Wyvern</span></p>
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
             >Frontend Mentor</a
