Added image of Jules Wyvern to footer

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         </div>
 
         <div class="card-footer">
+          <img src="images/image-avatar.png" alt="image of Jules Wyvern">
           <p> Creation of <span class="creator">Jules Wyvern</span></p>
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
