Added comments to easily navigate sections

--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
   </head>
   <body>
     <div class="card" style="width: 18rem">
+      <!-- main image -->
       <img
         src="images/image-equilibrium.jpg"
         alt="picture of Equilibrium art"
       />
+
+      <!-- title  -->
       <div class="card-body">
         <div class="card-title">
           <h5>Equilibrium #3429</h5>
@@ -53,12 +56,14 @@
           Our Equilibrium collection promotes balance and calm.
         </p>
 
+        <!-- pricing and duration -->
         <div class="row">
         <a href="#" class="card-link col-6 price"><img src="images/icon-ethereum.svg" alt="ethereum icon"> 0.041 ETH </a>
 
         <p class="card-text col-6"><img src="images/icon-clock.svg" alt="clock icon"></i> O3 days left</p>
         </div>
 
+        <!-- footer -->
         <div class="card-footer">
           <img src="images/image-avatar.png" alt="image of Jules Wyvern">
           <p> Creation of <span class="creator">Jules Wyvern</span></p>
