--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <!-- footer -->
         <div class="card-footer">
-          <img src="images/image-avatar.png" alt="image of Jules Wyvern">
+          <img class="avatar" src="images/image-avatar.png" alt="image of Jules Wyvern">
           <p> Creation of <span class="creator">Jules Wyvern</span></p>
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
