Added custom class to main image

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <div class="card" style="width: 22rem">
       <!-- main image -->
       <img
+        class="main-img"
         src="images/image-equilibrium.jpg"
         alt="picture of Equilibrium art"
       />
